# eventpledge-test

./: .gitignore  db.sqlite3  main.py  manage.py  package-lock.json  package.json  pyproject.toml  vite.config.mjs
core/: settings_defaults.py  signals.py  site_settings_accessor.py  utils.py
core/admin/: __init__.py  base.py
core/migrations/: 0001_initial.py  0002_sitesettings_privacy_policy.py  0003_alter_sitesettings_privacy_policy.py  0004_alter_sitesettings_privacy_policy.py  0005_sitesettings_consent_text.py  0006_sitesettings_submission_form_heading_and_more.py  0007_alter_sitesettings_submission_form_subheading.py  0008_alter_sitesettings_options_and_more.py  0009_sitesettings_thank_you_page_heading_and_more.py  0010_sitesettings_visualisation_font_factor_and_more.py  0011_alter_sitesettings_visualisation_font_factor.py  0012_sitesettings_visualisation_hero_heading_and_more.py
core/models/: __init__.py  base.py  site_settings.py
core/templatetags/: site_settings_tags.py
eventpledge/: asgi.py  settings.py  urls.py  wsgi.py
pledges/: admin.py  consumers.py  forms.py  models.py  routing.py  views.py
pledges/migrations/: 0001_initial.py  0002_submission_allow_display.py  0003_submission_personal_pledge_censored.py  0004_alter_submission_allow_display.py  0005_alter_submission_personal_pledge.py
static/.vite/: manifest.json
static/assets/: form-YErs8j0a.js  main-BsmAoenl.css  main-CUyr56JW.js  main-qaNEl7m2.css  visualisation_barchart-B9c1ZCrb.js
static_src/css/: styles.css
static_src/js/: alpine-setup.js  form.js  main.js  (+2 more)
templates/: base.html
(+7 files in other folders)
